fixed: let button text stay in alignment with the consumnig app root font sizing

--- a/core/src/Button/Button.less
+++ b/core/src/Button/Button.less
@@ -19,7 +19,6 @@
   color: #ffffff;
   cursor: pointer;
   display: flex;
-  font-size: @font-size-button;
   font-weight: @font-weight-bold;
   font-style: normal;
   font-stretch: normal;
